--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 /* header  */
-
+header{
+    background-color: #2c3e50;
+    color: white;
+    height: 5.625rem;
+    display: flex;
+    align-items: center;
+}
 /* main  */
 
 /* footer  */
