--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,10 @@ header{
     background-color: black;
 }
 /* footer  */
+.footer_top{
+    background-color: #3a546d;
+}
+.footer_bottom{
+    background-color: #2c3e50;
+    height: 6.875rem;
+}
