--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,32 @@
 /* header  */
 header{
     background-color: #2c3e50;
-    color: white;
     height: 5.625rem;
     display: flex;
     align-items: center;
+}
+.ms_text-color{
+    color: white;
+}
+.ms_bars-color{
+    color: #888888;
+}
+header ul{
+    display: flex;
+}
+/* typo */
+li{
+    list-style: none;
+    padding-left: 30px;
+}
+a{
+    text-decoration: none;
+}
+.ms_font-size14{
+    font-size: .875rem;
+}
+.ms_font-size20{
+    font-size: 1.25rem;
 }
 /* main  */
 .odd_section{
