--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ ul{
     display: flex;
     padding-left: 0rem;
 }
+.ms_star{
+    font-size: 1.875rem;
+}
 /* typo */
 li{
     list-style: none;
@@ -32,7 +35,9 @@ a{
 .ms_font-size20{
     font-size: 1.25rem;
 }
+
 /* main  */
+/* prima sezione  */
 .ms_odd-section{
     background-color: #1abc9c;
     color: white;
@@ -49,7 +54,16 @@ a{
 .ms_hr{
     background-color: white;
     height: .25rem;
-    width: 37%;
+    width: 35%;
+}
+/* seconda sezione */
+.ms_hr-2{
+    background-color: #2c3e50;
+    height: .25rem;
+    width: 35%;
+}
+#portfolio i{
+    color: #2c3e50;
 }
 /* footer  */
 .footer_top{
